@@ -25,6 +25,7 @@ Changes that introduce incompatibilities:
 Changes that do not introduce incompatibilities:
 
 * Add a function sol.main.get_quest_version() (#1058) by Nate-Devv.
+* Add methods entity:get_layer() and entity:set_layer().
 
 Data files format changes
 -------------------------
